[docs/tpt] fix katex rendering issue

--- a/docs/source/notebooks/tpt.ipynb
+++ b/docs/source/notebooks/tpt.ipynb
@@ -26,10 +26,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:34.432573Z",
-     "iopub.status.busy": "2020-10-26T12:02:34.429800Z",
-     "iopub.status.idle": "2020-10-26T12:02:35.156114Z",
-     "shell.execute_reply": "2020-10-26T12:02:35.155550Z"
+     "iopub.execute_input": "2020-11-04T13:27:29.356870Z",
+     "iopub.status.busy": "2020-11-04T13:27:29.354295Z",
+     "iopub.status.idle": "2020-11-04T13:27:30.217534Z",
+     "shell.execute_reply": "2020-11-04T13:27:30.216758Z"
     }
    },
    "outputs": [],
@@ -56,10 +56,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:35.159975Z",
-     "iopub.status.busy": "2020-10-26T12:02:35.159306Z",
-     "iopub.status.idle": "2020-10-26T12:02:35.166378Z",
-     "shell.execute_reply": "2020-10-26T12:02:35.165970Z"
+     "iopub.execute_input": "2020-11-04T13:27:30.222028Z",
+     "iopub.status.busy": "2020-11-04T13:27:30.221594Z",
+     "iopub.status.idle": "2020-11-04T13:27:30.228506Z",
+     "shell.execute_reply": "2020-11-04T13:27:30.228853Z"
     }
    },
    "outputs": [],
@@ -87,10 +87,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:35.181828Z",
-     "iopub.status.busy": "2020-10-26T12:02:35.181428Z",
-     "iopub.status.idle": "2020-10-26T12:02:35.204344Z",
-     "shell.execute_reply": "2020-10-26T12:02:35.203615Z"
+     "iopub.execute_input": "2020-11-04T13:27:30.238534Z",
+     "iopub.status.busy": "2020-11-04T13:27:30.238073Z",
+     "iopub.status.idle": "2020-11-04T13:27:30.272535Z",
+     "shell.execute_reply": "2020-11-04T13:27:30.272084Z"
     }
    },
    "outputs": [],
@@ -119,10 +119,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:35.209251Z",
-     "iopub.status.busy": "2020-10-26T12:02:35.208816Z",
-     "iopub.status.idle": "2020-10-26T12:02:35.210864Z",
-     "shell.execute_reply": "2020-10-26T12:02:35.211257Z"
+     "iopub.execute_input": "2020-11-04T13:27:30.277409Z",
+     "iopub.status.busy": "2020-11-04T13:27:30.276979Z",
+     "iopub.status.idle": "2020-11-04T13:27:30.279646Z",
+     "shell.execute_reply": "2020-11-04T13:27:30.279187Z"
     }
    },
    "outputs": [],
@@ -144,10 +144,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:35.215249Z",
-     "iopub.status.busy": "2020-10-26T12:02:35.214848Z",
-     "iopub.status.idle": "2020-10-26T12:02:36.261559Z",
-     "shell.execute_reply": "2020-10-26T12:02:36.261156Z"
+     "iopub.execute_input": "2020-11-04T13:27:30.285633Z",
+     "iopub.status.busy": "2020-11-04T13:27:30.284787Z",
+     "iopub.status.idle": "2020-11-04T13:27:31.518123Z",
+     "shell.execute_reply": "2020-11-04T13:27:31.518680Z"
     }
    },
    "outputs": [],
@@ -178,10 +178,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:36.264999Z",
-     "iopub.status.busy": "2020-10-26T12:02:36.264492Z",
-     "iopub.status.idle": "2020-10-26T12:02:36.273324Z",
-     "shell.execute_reply": "2020-10-26T12:02:36.272922Z"
+     "iopub.execute_input": "2020-11-04T13:27:31.522823Z",
+     "iopub.status.busy": "2020-11-04T13:27:31.522135Z",
+     "iopub.status.idle": "2020-11-04T13:27:31.531376Z",
+     "shell.execute_reply": "2020-11-04T13:27:31.531000Z"
     }
    },
    "outputs": [],
@@ -236,7 +236,9 @@
     "\n",
     "it can be defined as\n",
     "\n",
-    "$$ q^{(+)}_i=\\mathbb{P}_{i}(T_{A}<T_{B}). $$\n",
+    "$$\n",
+    "q^{(+)}_i=\\mathbb{P}_{i}(T_{A} < T_{B}).\n",
+    "$$\n",
     "\n",
     "It also satisfies the boundary value problem (BVP)\n",
     "\n",
@@ -258,10 +260,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:36.303434Z",
-     "iopub.status.busy": "2020-10-26T12:02:36.289808Z",
-     "iopub.status.idle": "2020-10-26T12:02:37.056227Z",
-     "shell.execute_reply": "2020-10-26T12:02:37.055746Z"
+     "iopub.execute_input": "2020-11-04T13:27:31.582189Z",
+     "iopub.status.busy": "2020-11-04T13:27:31.566440Z",
+     "iopub.status.idle": "2020-11-04T13:27:32.468742Z",
+     "shell.execute_reply": "2020-11-04T13:27:32.468165Z"
     }
    },
    "outputs": [],
@@ -343,10 +345,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:37.059469Z",
-     "iopub.status.busy": "2020-10-26T12:02:37.058996Z",
-     "iopub.status.idle": "2020-10-26T12:02:37.061627Z",
-     "shell.execute_reply": "2020-10-26T12:02:37.061198Z"
+     "iopub.execute_input": "2020-11-04T13:27:32.472860Z",
+     "iopub.status.busy": "2020-11-04T13:27:32.472419Z",
+     "iopub.status.idle": "2020-11-04T13:27:32.475165Z",
+     "shell.execute_reply": "2020-11-04T13:27:32.474684Z"
     }
    },
    "outputs": [],
@@ -366,10 +368,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:37.162967Z",
-     "iopub.status.busy": "2020-10-26T12:02:37.150269Z",
-     "iopub.status.idle": "2020-10-26T12:02:41.093245Z",
-     "shell.execute_reply": "2020-10-26T12:02:41.093647Z"
+     "iopub.execute_input": "2020-11-04T13:27:32.558223Z",
+     "iopub.status.busy": "2020-11-04T13:27:32.555826Z",
+     "iopub.status.idle": "2020-11-04T13:27:37.387447Z",
+     "shell.execute_reply": "2020-11-04T13:27:37.387978Z"
     }
    },
    "outputs": [],
@@ -416,10 +418,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:41.098060Z",
-     "iopub.status.busy": "2020-10-26T12:02:41.097640Z",
-     "iopub.status.idle": "2020-10-26T12:02:41.100407Z",
-     "shell.execute_reply": "2020-10-26T12:02:41.099989Z"
+     "iopub.execute_input": "2020-11-04T13:27:37.392966Z",
+     "iopub.status.busy": "2020-11-04T13:27:37.392542Z",
+     "iopub.status.idle": "2020-11-04T13:27:37.395008Z",
+     "shell.execute_reply": "2020-11-04T13:27:37.394587Z"
     }
    },
    "outputs": [],
@@ -443,10 +445,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:41.104834Z",
-     "iopub.status.busy": "2020-10-26T12:02:41.104413Z",
-     "iopub.status.idle": "2020-10-26T12:02:41.106352Z",
-     "shell.execute_reply": "2020-10-26T12:02:41.106777Z"
+     "iopub.execute_input": "2020-11-04T13:27:37.398529Z",
+     "iopub.status.busy": "2020-11-04T13:27:37.398085Z",
+     "iopub.status.idle": "2020-11-04T13:27:37.400615Z",
+     "shell.execute_reply": "2020-11-04T13:27:37.400182Z"
     }
    },
    "outputs": [],
@@ -466,10 +468,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:41.109730Z",
-     "iopub.status.busy": "2020-10-26T12:02:41.109290Z",
-     "iopub.status.idle": "2020-10-26T12:02:41.111988Z",
-     "shell.execute_reply": "2020-10-26T12:02:41.111587Z"
+     "iopub.execute_input": "2020-11-04T13:27:37.403608Z",
+     "iopub.status.busy": "2020-11-04T13:27:37.403183Z",
+     "iopub.status.idle": "2020-11-04T13:27:37.405896Z",
+     "shell.execute_reply": "2020-11-04T13:27:37.405308Z"
     }
    },
    "outputs": [],
@@ -493,10 +495,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:41.115214Z",
-     "iopub.status.busy": "2020-10-26T12:02:41.114654Z",
-     "iopub.status.idle": "2020-10-26T12:02:42.103145Z",
-     "shell.execute_reply": "2020-10-26T12:02:42.103665Z"
+     "iopub.execute_input": "2020-11-04T13:27:37.410935Z",
+     "iopub.status.busy": "2020-11-04T13:27:37.410472Z",
+     "iopub.status.idle": "2020-11-04T13:27:38.466977Z",
+     "shell.execute_reply": "2020-11-04T13:27:38.467297Z"
     }
    },
    "outputs": [],
@@ -516,10 +518,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:42.119066Z",
-     "iopub.status.busy": "2020-10-26T12:02:42.108650Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.235753Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.235333Z"
+     "iopub.execute_input": "2020-11-04T13:27:38.527708Z",
+     "iopub.status.busy": "2020-11-04T13:27:38.519546Z",
+     "iopub.status.idle": "2020-11-04T13:27:39.728417Z",
+     "shell.execute_reply": "2020-11-04T13:27:39.728743Z"
     }
    },
    "outputs": [],
@@ -548,10 +550,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.240017Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.239648Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.241924Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.241541Z"
+     "iopub.execute_input": "2020-11-04T13:27:39.732889Z",
+     "iopub.status.busy": "2020-11-04T13:27:39.732480Z",
+     "iopub.status.idle": "2020-11-04T13:27:39.734447Z",
+     "shell.execute_reply": "2020-11-04T13:27:39.734022Z"
     }
    },
    "outputs": [],
@@ -573,10 +575,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.245492Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.245027Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.247144Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.247445Z"
+     "iopub.execute_input": "2020-11-04T13:27:39.737903Z",
+     "iopub.status.busy": "2020-11-04T13:27:39.737510Z",
+     "iopub.status.idle": "2020-11-04T13:27:39.739363Z",
+     "shell.execute_reply": "2020-11-04T13:27:39.739779Z"
     }
    },
    "outputs": [],
@@ -596,10 +598,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.263250Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.261916Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.377665Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.377272Z"
+     "iopub.execute_input": "2020-11-04T13:27:39.773935Z",
+     "iopub.status.busy": "2020-11-04T13:27:39.767767Z",
+     "iopub.status.idle": "2020-11-04T13:27:39.899901Z",
+     "shell.execute_reply": "2020-11-04T13:27:39.899534Z"
     }
    },
    "outputs": [],
@@ -631,10 +633,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.396269Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.394688Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.631755Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.631324Z"
+     "iopub.execute_input": "2020-11-04T13:27:39.933291Z",
+     "iopub.status.busy": "2020-11-04T13:27:39.932867Z",
+     "iopub.status.idle": "2020-11-04T13:27:40.198533Z",
+     "shell.execute_reply": "2020-11-04T13:27:40.198056Z"
     }
    },
    "outputs": [],
@@ -696,10 +698,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.635299Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.634533Z",
-     "iopub.status.idle": "2020-10-26T12:02:43.839797Z",
-     "shell.execute_reply": "2020-10-26T12:02:43.840204Z"
+     "iopub.execute_input": "2020-11-04T13:27:40.201658Z",
+     "iopub.status.busy": "2020-11-04T13:27:40.201182Z",
+     "iopub.status.idle": "2020-11-04T13:27:40.444489Z",
+     "shell.execute_reply": "2020-11-04T13:27:40.444991Z"
     }
    },
    "outputs": [],
@@ -720,10 +722,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:43.860167Z",
-     "iopub.status.busy": "2020-10-26T12:02:43.859574Z",
-     "iopub.status.idle": "2020-10-26T12:02:44.700192Z",
-     "shell.execute_reply": "2020-10-26T12:02:44.699786Z"
+     "iopub.execute_input": "2020-11-04T13:27:40.474871Z",
+     "iopub.status.busy": "2020-11-04T13:27:40.473861Z",
+     "iopub.status.idle": "2020-11-04T13:27:41.469643Z",
+     "shell.execute_reply": "2020-11-04T13:27:41.469951Z"
     }
    },
    "outputs": [],
@@ -760,10 +762,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:44.781703Z",
-     "iopub.status.busy": "2020-10-26T12:02:44.741781Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.828322Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.827681Z"
+     "iopub.execute_input": "2020-11-04T13:27:41.553953Z",
+     "iopub.status.busy": "2020-11-04T13:27:41.512286Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.711066Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.711487Z"
     }
    },
    "outputs": [],
@@ -785,10 +787,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.834448Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.834026Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.877100Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.876749Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.717577Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.717176Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.767965Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.767473Z"
     }
    },
    "outputs": [],
@@ -803,10 +805,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.880375Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.879911Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.882505Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.882116Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.771097Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.770644Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.772814Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.773297Z"
     }
    },
    "outputs": [],
@@ -827,10 +829,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.885588Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.885201Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.961695Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.961241Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.777625Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.776653Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.866053Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.865562Z"
     }
    },
    "outputs": [],
@@ -850,10 +852,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.964768Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.964377Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.967078Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.966677Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.869788Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.869161Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.871904Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.871490Z"
     }
    },
    "outputs": [],
@@ -874,10 +876,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.970663Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.970276Z",
-     "iopub.status.idle": "2020-10-26T12:02:45.974573Z",
-     "shell.execute_reply": "2020-10-26T12:02:45.974167Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.875361Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.874744Z",
+     "iopub.status.idle": "2020-11-04T13:27:42.880226Z",
+     "shell.execute_reply": "2020-11-04T13:27:42.880677Z"
     }
    },
    "outputs": [],
@@ -899,10 +901,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-10-26T12:02:45.981458Z",
-     "iopub.status.busy": "2020-10-26T12:02:45.980244Z",
-     "iopub.status.idle": "2020-10-26T12:02:46.976720Z",
-     "shell.execute_reply": "2020-10-26T12:02:46.977100Z"
+     "iopub.execute_input": "2020-11-04T13:27:42.887310Z",
+     "iopub.status.busy": "2020-11-04T13:27:42.886463Z",
+     "iopub.status.idle": "2020-11-04T13:27:43.973182Z",
+     "shell.execute_reply": "2020-11-04T13:27:43.973601Z"
     }
    },
    "outputs": [],
