Added C++ integrators for ODEs and SDEs and a kernel EDMD example. Restructured kernel EDMD code.

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -583,6 +583,16 @@
  year    = {2018},
  doi     = {10.1007/s00332-017-9437-7},
 }
+@article{klus2016edmd,
+    author  = {S. Klus and P. Koltai and C. Sch{\"u}tte},
+    title   = {On the numerical approximation of the {P}erron--{F}robenius and {K}oopman operator},
+    journal = {Journal of Computational Dynamics},
+    volume  = {3},
+    number  = {1},
+    pages   = {51--79},
+    year    = {2016},
+    doi     = {10.3934/jcd.2016003},
+}
 @article{froyland2010coherent,
  author  = {Froyland, Gary and Santitissadeekorn, Naratip and Monahan, Adam},
  title   = {Transport in time-dependent dynamical systems: Finite-time coherent sets},
