--- a/docs/source/notebooks/kedmd.ipynb
+++ b/docs/source/notebooks/kedmd.ipynb
@@ -27,7 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import deeptime as dt\n",
-    "import deeptime.data._systems_bindings as systems"
+    "import deeptime.data._data_bindings as systems"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "h = 1e-3 # step size of the Euler-Maruyama integrator\n",
     "nSteps = 10000 # number of steps, the lag time is thus tau = nSteps*h = 10\n",
     "\n",
-    "f = systems.QuadrupleWell2D(h, nSteps)"
+    "f = systems.QuadrupleWell2D(42, h, nSteps)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "x0 = np.zeros((2, 1)) # inital condition\n",
     "n = 10000 # number of evaluations of the  discretized dynamical system with lag time tau\n",
-    "y = f.getTrajectory(x0, n) # trajectory of length n starting in x0\n",
+    "y = f.trajectory(x0, n) # trajectory of length n starting in x0\n",
     "\n",
     "plt.hist2d(y[0, :].T, y[1, :].T, range=[[-2, 2], [-2, 2]], bins=30, density=True)\n",
     "plt.colorbar()"
@@ -237,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
