--- a/docs/source/notebooks/kedmd.ipynb
+++ b/docs/source/notebooks/kedmd.ipynb
@@ -26,8 +26,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import deeptime as dt\n",
-    "import deeptime.data._data_bindings as systems"
+    "import deeptime as dt"
    ]
   },
   {
