[docs/edmd] wip

--- a/docs/source/notebooks/dmd.ipynb
+++ b/docs/source/notebooks/dmd.ipynb
@@ -90,7 +90,7 @@
     "data = np.empty((500, A.shape[0]))\n",
     "data[0] = x0\n",
     "for t in range(1, len(data)):\n",
-    "    data[t] = A @ data[t - 1] + state.normal(scale=1e-4)"
+    "    data[t] = A @ data[t - 1] + state.normal(scale=1e-4, size=(2,))"
    ]
   },
   {
@@ -149,8 +149,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traj_standard = standard_model.transform(data[:10])\n",
-    "traj_exact = exact_model.transform(data[:10])"
+    "traj_standard = standard_model.transform(data)\n",
+    "traj_exact = exact_model.transform(data)"
    ]
   },
   {
@@ -166,9 +166,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(*np.real(traj_standard[:10]).T, alpha=.5)\n",
-    "plt.scatter(*np.real(traj_exact[:10]).T, alpha=.5)\n",
-    "plt.scatter(*data[:10].T, alpha=.5, marker='x');"
+    "plt.scatter(*data.T, alpha=.5, marker='x', label='ground truth')\n",
+    "plt.scatter(*np.real(traj_standard)[::5].T, marker='*',alpha=.5, label='standard DMD')\n",
+    "plt.scatter(*np.real(traj_exact)[::5].T, alpha=.1, label='exact DMD')\n",
+    "plt.legend();"
    ]
   },
   {
@@ -183,14 +184,186 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import deeptime as dt\n",
+    "\n",
+    "import deeptime.data._data_bindings as bd"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ".1/1e-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tw = bd.TripleWell2D()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 55000\n",
+    "X = np.stack([np.random.uniform(-2, 2, size=(N,)), np.random.uniform(-1, 2, size=(N,))]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = tw(X, n_threads=8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basis = dt.basis.Monomials(10)\n",
+    "edmd_estimator = dt.decomposition.EDMD(basis, n_eigs=None)\n",
+    "edmd_model = edmd_estimator.fit((X, Y)).fetch_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edmd_model.eigenvalues.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.real(edmd_model.eigenvalues), 'x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edmd_model.modes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edmd_model.basis(X).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi = np.real(edmd_model.transform(X))\n",
+    "\n",
+    "# normalize\n",
+    "for i in range(len(edmd_model.eigenvalues)):\n",
+    "    phi[:, i] = phi[:, i] / np.max(np.abs(phi[:, i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8, 8))\n",
+    "gs = fig.add_gridspec(ncols=2, nrows=2)\n",
+    "\n",
+    "ax = fig.add_subplot(gs[0, 0])\n",
+    "ax.scatter(*X.T, c=phi[:, 0])\n",
+    "ax.set_title('1st eigenfunction')\n",
+    "\n",
+    "ax = fig.add_subplot(gs[0, 1])\n",
+    "ax.scatter(*X.T, c=phi[:, 1])\n",
+    "ax.set_title('2nd eigenfunction')\n",
+    "\n",
+    "ax = fig.add_subplot(gs[1, 0])\n",
+    "ax.scatter(*X.T, c=phi[:, 2])\n",
+    "ax.set_title('3rd eigenfunction')\n",
+    "\n",
+    "ax = fig.add_subplot(gs[1, 1])\n",
+    "ax.scatter(*X.T, c=phi[:, 3])\n",
+    "ax.set_title('4th eigenfunction');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp = phi[..., :8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans = dt.clustering.Kmeans(n_clusters=3, n_jobs=4).fit(np.real(pp)).fetch_model()\n",
+    "c = kmeans.transform(np.real(pp))\n",
+    "\n",
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "ax1.scatter(*X.T, c=c)\n",
+    "ax1.set_aspect('equal')\n",
+    "ax2.scatter(*Y.T, c=c)\n",
+    "ax2.set_aspect('equal')"
+   ]
   },
   {
    "cell_type": "raw",
