--- a/docs/source/notebooks/vampnets.ipynb
+++ b/docs/source/notebooks/vampnets.ipynb
@@ -25,7 +25,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from tqdm.notebook import tqdm\n",
     "\n",
     "import deeptime as dt"
    ]
@@ -328,7 +327,7 @@
     "ax2.set_xlabel('x')\n",
     "ax2.set_ylabel('y')\n",
     "cb = ax2.contourf(grid[0], grid[1], z.reshape(grid[0].shape), levels=15, cmap='coolwarm')\n",
-    "ax2.scatter(*traj.T, feat, color='black', marker='x')\n",
+    "ax2.scatter(*traj.T, s=.1, color='black', marker='x')\n",
     "plt.colorbar(cb, ax=ax2);"
    ]
   },
@@ -383,7 +382,7 @@
     "ax2.set_xlabel('x')\n",
     "ax2.set_ylabel('y')\n",
     "cb = ax2.contourf(grid[0], grid[1], z.reshape(grid[0].shape), levels=15, cmap='coolwarm')\n",
-    "ax2.scatter(*traj.T, feat, color='black', marker='x')\n",
+    "ax2.scatter(*traj.T, s=.1, color='black', marker='x')\n",
     "plt.colorbar(cb, ax=ax2);"
    ]
   },
